# my_rb1_robot

install/: setup.sh
install/my_rb1_description/share/my_rb1_description/urdf/: my_rb1_robot.urdf
log/: latest_build
my_rb1_description/: package.xml  setup.py
my_rb1_description/launch/: display.launch.py
my_rb1_description/my_rb1_description/launch/: display.launch.py
my_rb1_description/my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_description/rviz/: config.rviz
my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_gazebo/: rb1_simulation.launch  setup.py
my_rb1_gazebo/launch/: spawn.launch.py
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/scripts/: rotate_service.py
my_rb1_ros/srv/: Rotate.srv
