<?xml version="1.0"?>
<package format="2">
  <name>my_rb1_ros</name>
  <version>0.0.0</version>
  <description>RB1 robot rotation service package</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>
